# gameserver-manager

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  VERSION.md  alembic.ini  babel.cfg  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: project-definition.md
.github/workflows/: ci.yml  release.yml
.kilo/: .gitignore  kilo.json
alembic/: env.py
alembic/versions/: 20260331_122844_be520d873126_add_user_model.py  20260331_130601_5e633d8d57eb_add_backup_model.py  20260331_130858_08b9432dba99_add_api_key_model.py  20260331_133715_38426e7f183f_batch4_medium_features.py  20260331_141336_fb5cbe13910d_batch5_low_features.py  20260331_150000_b6_01_totp_add_totp_fields.py  20260331_150100_b6_02_rbac_add_rbac.py  20260331_150400_b6_05_webhook.py  20260331_162000_b6_08_site_settings.py  20260331_180000_b7_01_curseforge_api_key.py  20260401_100000_b8_01_crash_auto_restart.py  20260401_210000_b9_02_batch2_server_mgmt.py  20260401_240000_b9_05_batch6_extras.py  20260402_100000_b10_01_max_compat_version.py  20260404_100000_b11_01_steamcmd_integration.py  20260419_130000_b11_02_backup_size_bigint.py  20260419_170000_b11_03_workshop_file_size_bigint.py  20260419_180000_b11_04_server_gmod_gslt.py  20260606_120000_b12_01_user_security.py  20260606_123000_b12_02_fk_cascades_indexes.py  20260713_133000_b13_01_query_port.py
app/: config.py  database.py  i18n.py  main.py  template_utils.py
app/middleware/: csrf.py  locale.py  security_headers.py
app/models/: __init__.py  backup.py  invite_link.py  mod.py  node.py  server.py  steam_account.py  workshop_item.py
app/routers/: api_keys.py  audit.py  auth.py  backups.py  files.py  invites.py  metrics.py  mods.py  nodes.py  scheduler.py  servers.py  site_settings.py  status.py  users.py  webhooks.py  ws.py
app/schemas/: __init__.py  backup.py  schedule.py  server.py
app/services/: api_key_service.py  audit_service.py  auth.py  backup_manager.py  backup_storage.py  config_editor.py  config_export.py  docker_manager.py  invite_service.py  jar_downloader.py  java_manager.py  log_manager.py  mod_updater.py  modpack_importer.py  port_manager.py  query_protocol.py  rcon_client.py  resource_monitor.py  server_detector.py  server_manager.py  server_updater.py  settings_service.py  sftp_server.py  status_service.py  steam_workshop.py  steamcmd.py  steamcmd_installer.py  task_registry.py  task_scheduler.py  version_cache.py  webauthn_service.py  world_manager.py
app/static/: manifest.json  offline.html
app/templates/: api_keys.html  audit_log.html  backups.html  base.html  base_embed.html  dashboard.html  invite_redeem.html  login.html  player_management.html  preferences.html  scheduler.html  server_create.html  server_detail.html  server_import.html  servers.html  setup.html  site_settings.html  status.html  users.html  workshop.html
docs/: UI_OVERHAUL_PLAN.md  database-backends.md  testing.md
gsm/: .dockerignore  entrypoint.sh  main.py  package.json  tailwind.config.js
tests/: test_api_v1_steam.py  test_config_defaults.py  test_rcon_client.py  test_security_ssrf.py  test_server_detail_tabs.py  test_steam_rcon.py  test_steam_routes.py  test_steam_services.py  test_task_registry.py
(+149 files in other folders)
