[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gameserver-manager"
version = "2.6.2"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["app", "main.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Legacy high-complexity functions; refactor in future phase
"app/services/server_manager.py" = ["C901"]
"app/services/mod_updater.py" = ["C901"]
"app/services/modpack_importer.py" = ["C901"]
"app/services/notification_service.py" = ["C901"]
"app/services/task_scheduler.py" = ["C901"]
"app/services/server_updater.py" = ["C901"]
"app/services/steamcmd.py" = ["C901"]
"app/services/java_manager.py" = ["C901"]
"app/services/server_detector.py" = ["C901"]
"app/models/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
